--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>DevOps</title>
     <link rel="icon" type="image/png" href="./favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Open Source guide" />
+    <meta name="description" content="Devops learnings" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
